# Linear_Board_View

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PROJECT_STATEMENT.md  README.md  VERSION_LOG.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vite.tauri.config.ts
docs/: development_modes.md
grok/: VEGA-3D.md
scripts/: agent_post.ts  fetchSnapshot.ts  migrate_web_to_app.py  release.sh  run-dev.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json  tauri.dev-shared.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: linear_smoke.rs  updater_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  lib.rs  linear.rs  main.rs
src/components/: AgentIssueCard.tsx  Board.tsx  BoardContextMenu.tsx  CanvasBoard.tsx  DetailPanel.tsx  EdgeStylePicker.tsx  FilterBar.tsx  IssueCard.tsx  IssuePickerPopover.tsx  LabeledEdge.tsx  NoteCard.tsx  PinnedTabsStrip.tsx  ShortcutsDialog.tsx  Toast.tsx  TopBar.tsx  TopBarMenu.tsx  UpdaterModal.tsx  WorkingOnBoard.tsx  WorkingOnContextMenu.tsx  WorkingOnDropdown.tsx
src/lib/: agentCardContext.tsx  agentProtocol.ts  boardProps.ts  cardId.ts  clipboard.ts  edgeStyles.ts  filter.ts  graphMode.ts  layout.ts  linearSdkStub.ts  loadIssues.ts  migrateImages.ts  mindmapLayout.ts  persistence.ts  projectColor.ts  synthetic.ts  tauriBridge.ts  tauriInvoke.ts  theme.ts  updater.ts  useAgentSessions.ts  useBoardState.ts  usePinnedTabs.ts  useWorkingOnState.ts  useWorkingOnViews.ts  workingOn.ts  workingOnViews.ts
src/linear/: createComment.ts  fetchIssues.ts  fetchWorkflowStates.ts  types.ts  updateIssue.ts
src/server/: agentPoller.ts  agentSessions.ts  boardStore.ts  linearApiPlugin.ts  node-pty.d.ts  workingOnStore.ts
